--- a/index.html
+++ b/index.html
@@ -3,85 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael Fernando Herrera Rodríguez - Portafolio</title>
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/hero.css">
-    <link rel="stylesheet" href="styles/about.css">
-    <link rel="stylesheet" href="styles/skills.css">
-    <link rel="stylesheet" href="styles/education.css">
-    <link rel="stylesheet" href="styles/contact.css">
-    <link rel="stylesheet" href="styles/news.css">
-    <link rel="stylesheet" href="styles/game.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <title>Portafolio de Michael Fernando Herrera Rodríguez</title>
+    <link rel="stylesheet" href="estilo.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
         <nav>
+            <img src="assets/logo.png" alt="Logo" class="logo">
             <ul>
-                <li><a href="#hero">Inicio</a></li>
-                <li><a href="#about">Sobre Mí</a></li>
-                <li><a href="#skills">Habilidades</a></li>
-                <li><a href="#education">Educación</a></li>
-                <li><a href="#contact">Contacto</a></li>
-                <li><a href="#news">Noticias</a></li>
-                <li><a href="#game">Juego</a></li>
+                <li><a href="#sobre-mi">Sobre mí</a></li>
+                <li><a href="#habilidades">Habilidades</a></li>
+                <li><a href="#educacion">Educación</a></li>
+                <li><a href="#noticias">Noticias</a></li>
+                <li><a href="#juego">Juego</a></li>
+                <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
+        <section class="hero">
+            <h1>Bienvenido a Mi Portafolio</h1>
+            <p>Soy Michael Fernando Herrera Rodríguez, ingeniero electrónico.</p>
+        </section>
     </header>
-    <section id="hero">
-        <h1>Bienvenido a Mi Portafolio</h1>
-        <p>Soy Michael Fernando Herrera Rodríguez</p>
-    </section>
-    <section id="about">
-        <h2>Sobre Mí</h2>
-        <img src="images/profile.jpg" alt="Michael">
-        <p>Soy ingeniero electrónico con una fuerte pasión por el aprendizaje y el crecimiento...</p>
-    </section>
-    <section id="skills">
-        <h2>Habilidades</h2>
-        <ul>
-            <li>HTML & CSS</li>
-            <li>JavaScript</li>
-            <li>Blockchain</li>
-            <li>Ciberseguridad</li>
-        </ul>
-    </section>
-    <section id="education">
-        <h2>Educación</h2>
-        <ul>
-            <li>Ingeniería Electrónica - Universidad XYZ</li>
-            <li>Bootcamp de Blockchain - Instituto ABC</li>
-            <li>Curso de Ciberseguridad - Google</li>
-        </ul>
-    </section>
-    <section id="contact">
-        <h2>Contáctame</h2>
-        <form id="contactForm">
-            <label for="name">Nombre:</label>
-            <input id="name" type="text" required>
-            <label for="email">Correo Electrónico:</label>
-            <input id="email" type="email" required>
-            <label for="message">Mensaje:</label>
-            <textarea id="message" required></textarea>
-            <button type="submit">Enviar</button>
-        </form>
-    </section>
-    <section id="news">
-        <h2>Noticias</h2>
-        <div id="newsContainer"></div>
-    </section>
-    <section id="game">
-        <h2>Juego</h2>
-        <canvas id="gameCanvas" width="800" height="600"></canvas>
-        <div id="scoreBoard">
-            <span id="score">Puntos: 0</span>
-            <span id="level">Nivel: 1</span>
-        </div>
-    </section>
-    <script src="scripts/main.js"></script>
-    <script src="scripts/contact.js"></script>
-    <script src="scripts/game.js"></script>
-    <script src="scripts/news.js"></script>
+
+    <main>
+        <section id="sobre-mi">
+            <h2>Sobre mí</h2>
+            <p>Detalles sobre tu formación y experiencia...</p>
+        </section>
+
+        <section id="habilidades">
+            <h2>Habilidades</h2>
+            <ul>
+                <li>Angular</li>
+                <li>JavaScript</li>
+                <li>HTML & CSS</li>
+                <li>Blockchain</li>
+                <li>Ciberseguridad</li>
+            </ul>
+        </section>
+
+        <section id="educacion">
+            <h2>Educación</h2>
+            <ul>
+                <li>Ingeniería Electrónica - Universidad Sergio Arboleda</li>
+                <li>Bootcamp de Blockchain - ABC Institute</li>
+                <li>Curso de Ciberseguridad - Google</li>
+            </ul>
+        </section>
+
+        <section id="noticias">
+            <h2>Noticias</h2>
+            <div id="noticias-contenido"></div>
+        </section>
+
+        <section id="juego">
+            <h2>Juego</h2>
+            <canvas id="gameCanvas" width="600" height="400"></canvas>
+            <button id="startButton">Iniciar Juego</button>
+            <div id="puntuacion">Puntuación: 0</div>
+        </section>
+
+        <section id="contacto">
+            <h2>Contacto</h2>
+            <form id="contactForm" action="https://formspree.io/f/{YOUR_ID}" method="POST">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+                <label for="mensaje">Mensaje:</label>
+                <textarea id="mensaje" name="mensaje" required></textarea>
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Michael Fernando Herrera Rodríguez. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
